syntax = "proto3";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.Products";

package grpc_server.api.protos.messages.products;

message ApplyTagsProductCommand {
    string id = 1;
    repeated string tag_names = 2;
}
